Bug 160632 - TABLE: Crash when using column width dialog
Summary: TABLE: Crash when using column width dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Cell-Management Crash
  Show dependency treegraph
 
Reported: 2024-04-11 19:43 UTC by Dieter
Modified: 2025-09-13 09:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt (8.70 KB, text/plain)
2024-04-12 08:59 UTC, Julien Nabet
Details
bt (8.26 KB, text/plain)
2024-04-12 09:04 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2024-04-11 19:43:05 UTC
Steps
1. Open a new document
2. Insert a table and place cursor inside
3. Table -> Size -> Column width
4. Click into width entry => Crash

Reproduceble: Always
Same result in Safe Mode

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5ebdcc60701ca5f2d267f92fa69ac06202309c52
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded


But not with

Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 1 Xisco Faulí 2024-04-11 20:50:12 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2024-01-30 12:24:47 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2024-01-30 17:08:22 +0100
commit a08110be32a6958f27ce9ddb1e2cb2227265dfe1 (patch)
tree 539c5abe4378858ce504a2c74a10252802d9111f
parent 93c4bfc96acf7f387120ff05883068d358a608c1 (diff)
convert table width dialog to async

Bisected with: bibisect-linux64-24.8
Comment 2 Julien Nabet 2024-04-12 08:59:49 UTC
Created attachment 193643 [details]
bt

On pc Debian x86-64 with master sources updated today, I got a crash when clicking Ok to change the column width, not at the very moment I enter column width so perhaps another pb.
Comment 3 Julien Nabet 2024-04-12 09:04:09 UTC
Created attachment 193644 [details]
bt

This time with gen rendering, I got the crash when entering the column width.

(gdb) p nPos
$3 = 1035

(gdb) p m_aData
$5 = std::__debug::vector of length -31284477180, capacity -1441162870452 = {{nPos = 140720587517768, nMin = 51442743660, nMax = 94603375663120, bHidden = 72},...

There's indeed something wrong here.
Comment 4 Commit Notification 2024-04-16 16:35:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0fa363faaba5dc9c57cf7fd1d4aa0dd300310682

tdf#160632 TABLE: Crash when using column width dialog

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2025-09-13 09:08:57 UTC
VERIFIED with

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 77b3fe6e8564ea579d8e9a5fc82c5eadf532072e
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded