tdf#160632 TABLE: Crash when using column width dialog

regression from
    commit a08110be32a6958f27ce9ddb1e2cb2227265dfe1
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jan 30 12:24:47 2024 +0200
    convert table width dialog to async

we were referencing an object that had already been destroyed by the
time the dialog completed

Change-Id: I2a06dd99129b53c558d6f5f3f96fc16dcc04f754
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166147
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>